/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.atomic.map.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message AtomicMapListener {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    string key = 2;
}

message AtomicMapEntry {
    AtomicMapKey key = 1 [
        (gogoproto.nullable) = false
    ];
    AtomicMapValue value = 2;
}

message AtomicMapKey {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    string key = 2;
}

message AtomicMapValue {
    bytes value = 1;
    google.protobuf.Timestamp expire = 2 [
        (gogoproto.stdtime) = true
    ];
}

message AtomicMapInput {
    oneof input {
        SizeInput size = 1;
        PutInput put = 2;
        InsertInput insert = 3;
        UpdateInput update = 4;
        GetInput get = 5;
        RemoveInput remove = 6;
        ClearInput clear = 7;
        LockInput lock = 8;
        UnlockInput unlock = 9;
        EntriesInput entries = 10;
        EventsInput events = 11;
    }
}

message AtomicMapOutput {
    oneof output {
        SizeOutput size = 1;
        PutOutput put = 2;
        InsertOutput insert = 3;
        UpdateOutput update = 4;
        GetOutput get = 5;
        RemoveOutput remove = 6;
        ClearOutput clear = 7;
        LockOutput lock = 8;
        UnlockOutput unlock = 9;
        EntriesOutput entries = 10;
        EventsOutput events = 11;
    }
}

message SizeInput {

}

message SizeOutput {
    uint32 size = 1;
}

message PutInput {
    string key = 1;
    Value value = 2;
    uint64 index = 3 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message PutOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message InsertInput {
    string key = 1;
    Value value = 2;
}

message InsertOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message UpdateInput {
    string key = 1;
    Value value = 2;
    uint64 index = 3 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message UpdateOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message GetInput {
    string key = 1;
}

message GetOutput {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message RemoveInput {
    string key = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message RemoveOutput {
    Value value = 1 [
        (gogoproto.nullable) = false
    ];
}

message ClearInput {

}

message ClearOutput {

}

message LockInput {
    repeated string keys = 1;
    google.protobuf.Duration timeout = 2 [
        (gogoproto.stdduration) = true
    ];
}

message LockOutput {

}

message UnlockInput {
    repeated string keys = 1;
}

message UnlockOutput {

}

message EntriesInput {

}

message EntriesOutput {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsInput {
    string key = 1;
    bool replay = 2;
}

message EventsOutput {
    Event event = 2 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    Type type = 1;
    Entry entry = 2 [
        (gogoproto.nullable) = false
    ];

    enum Type {
        NONE = 0;
        INSERT = 1;
        UPDATE = 2;
        REMOVE = 3;
    }
}

message Entry {
    string key = 1;
    Value value = 2 [
        (gogoproto.nullable) = false
    ];
    uint64 index = 3 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message Value {
    bytes value = 1;
    google.protobuf.Duration ttl = 2 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}
